# src/controllers/permission.ts
@@ -1,7 +1,8 @@
-import { Route, Tags, Post, Body, Get, Path } from "tsoa";
+import { Route, Tags, Post, Body, Get, Path, Security } from "tsoa";
 import {
 	IPermissionPayload,
 	createPermission,
+	getEntityTableNames,
 	getPermissionByRoleId,
 	getPermissions,
 } from "../services/permission";
@@ -11,6 +12,7 @@ import { IResponse } from "../types";
 @Route("permissions")
 @Tags("Permissions")
 export default class PermissionController {
+	@Security("Bearer")
 	@Post("/")
 	public async createPermission(@Body() body: IPermissionPayload): Promise<IResponse<Permissions>> {
 		const permission = await createPermission(body);
@@ -20,6 +22,7 @@ export default class PermissionController {
 			data: permission,
 		};
 	}
+	@Security("Bearer")
 	@Get("/")
 	public async getPermissions(): Promise<IResponse<Array<Permissions>>> {
 		const permissions = await getPermissions();
@@ -29,6 +32,27 @@ export default class PermissionController {
 			data: permissions,
 		};
 	}
+	@Security("Bearer")
+	@Get("/list")
+	public async getList(): Promise<IResponse<Array<string>>> {
+		const permissions = await getEntityTableNames();
+		const actions: string[] = ["list", "create", "detail"];
+
+		const result: string[] = [];
+
+		permissions.forEach((permission) => {
+			actions.forEach((action) => {
+				result.push(`${permission}.${action}`);
+			});
+		});
+
+		return {
+			code: 200,
+			success: true,
+			data: result,
+		};
+	}
+	@Security("Bearer")
 	@Get("/:id")
 	public async getPermissionByRoleId(@Path() id: string): Promise<IResponse<Permissions>> {
 		const permission = await getPermissionByRoleId(id);
